Â£Change default tempoutdir
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@30149 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -47,7 +47,7 @@ The function will convert the data set in a \Rclass{affyBatch} if the experiment
 
 %
 <<loadlibs>>=
-data = ArrayExpress("E-ATMX-26", tempoutdir=".")
+data = ArrayExpress("E-ATMX-26")
 class(data)
 @
 %
