Fix the special character from the man page
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@33522 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -1,4 +1,4 @@
-%\VignetteIndexEntry{ArrayExpress}
+%\VignetteIndexEntry{ArrayExpress: Import and convert ArrayExpress data sets into R object}
 %\VignetteDepends{Biobase}
 %\VignetteKeywords{ImportData}
 %\VignettePackage{ArrayExpress}
