--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -137,10 +137,7 @@ The arguments for the \Rfunction{magetab2bioc} are:
 As an example, we can use the files that we have downloaded in the previous example.
 
 <<magetab2bioc-full>>=
-rawset= magetab2bioc(rawfiles = full$rawfiles,
-  sdrf = full$sdrf,
-  adf = full$adf,
-  idf = full$idf)
+rawset= magetab2bioc(files = full)
 @
 %
 The object \Robject{rawset} is an \Rclass{AffyBatch}.
