--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -35,12 +35,12 @@ In the repository, for each dataset, ArrayExpress stores a MAGE-TAB document wit
 \section{Querying the database}
 
 It is possible to query the ArrayExpress repository, using the \Rfunction{queryAE} function. Two arguments are available, 'keywords' and 'species'. You can use both of them simultaneously or each of them independently, according to your needs. If you want to use several words, they need to be separated by a '+' without any space.
-Here is an example where the object \Robject{sets} contains the identifiers of all the datasets for which the word 'leukemia' was found in the description and for which the Homo sapiens is the studied species.
+Here is an example where the object \Robject{sets} contains the identifiers of all the datasets for which the word 'pneumonia' was found in the description and for which the Homo sapiens is the studied species.
 You need to be connected to Internet to have access to the database.
 
 <<queryAE>>=
 library("ArrayExpress")
-sets = queryAE(keywords = "leukemia", species = "homo+sapiens")
+sets = queryAE(keywords = "pneumonia", species = "homo+sapiens")
 @
 %
 
