Handling of multiple raw or processed zip files with original names
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@42287 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -194,7 +194,7 @@ AEsetnorm = rma(AEset)
 
 To check the normalisation efficiency, we can run a quality assessment. For details on the arguments used, please read the arrayQualityMetrics vignette.
 <<qanorm, results=hide>>=
-fac = grep("FactorValue",colnames(pData(AEset)), value=T)
+fac = grep("Factor.Value",colnames(pData(AEset)), value=T)
 library("arrayQualityMetrics")
 qanorm = arrayQualityMetrics(AEsetnorm, 
   outdir = "QAnorm", 
