Need to suggest arrayQualityMetrics (used in the vignette).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@49349 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -1,5 +1,5 @@
 %\VignetteIndexEntry{ArrayExpress: Import and convert ArrayExpress data sets into R object}
-%\VignetteDepends{Biobase}
+%\VignetteDepends{Biobase,affy,arrayQualityMetrics,lima}
 %\VignetteKeywords{ImportData}
 %\VignettePackage{ArrayExpress}
 
