--- a/inst/doc/ArrayExpress.Rnw
+++ b/inst/doc/ArrayExpress.Rnw
@@ -1,5 +1,5 @@
 %\VignetteIndexEntry{ArrayExpress: Import and convert ArrayExpress data sets into R object}
-%\VignetteDepends{Biobase,affy,arrayQualityMetrics,lima}
+%\VignetteDepends{Biobase,affy,arrayQualityMetrics,limma}
 %\VignetteKeywords{ImportData}
 %\VignettePackage{ArrayExpress}
 
